--- a/src/main/resources/application.yml.example
+++ b/src/main/resources/application.yml.example
@@ -8,14 +8,14 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://DATABASE_URL
+    url: jdbc:postgresql://DATABASE_URL:5432/DATABASE_NAME
     username: DATABASE_USERNAME
     password: DATABASE_PASSWORD
     max-active: 3
     max-idle: 3
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
